# machine-plugins

./: .gitignore  README.md  registry.json
community/agent_runtime_basic/: README.md  __init__.py  manifest.json  messages.py  pyproject.toml  runtime.py
community/agent_runtime_pydantic/: README.md  __init__.py  converters.py  manifest.json  pyproject.toml  runtime.py
community/browser_support/: README.md  __init__.py  base.py  manifest.json  playwright_browser.py  pyproject.toml  stagehand_browser.py  tools.py
community/channel_support/: README.md  __init__.py  manifest.json  pyproject.toml
community/deployer_support/: README.md  __init__.py  base.py  cloudflare.py  docker.py  dokploy.py  manifest.json  pyproject.toml  vercel.py
community/embeddings_azure/: README.md  __init__.py  manifest.json  provider.py  pyproject.toml
community/embeddings_google/: README.md  __init__.py  manifest.json  provider.py  pyproject.toml
community/embeddings_ollama/: README.md  __init__.py  manifest.json  provider.py  pyproject.toml
community/embeddings_sentence_transformers/: README.md  __init__.py  manifest.json  pyproject.toml
community/observability_support/: README.md  __init__.py  config.py  cost.py  decorator.py  manifest.json  pyproject.toml  spans.py  tracer.py
community/observability_support/exporters/: __init__.py  console.py  datadog.py  jaeger.py  langfuse.py  langsmith.py  otlp.py  sentry.py
community/provider_azure_openai/: README.md  __init__.py  manifest.json  provider.py  pyproject.toml
community/provider_github_copilot/: README.md  __init__.py  auth.py  cli.py  manifest.json  provider.py  pyproject.toml
community/provider_google_gemini/: README.md  __init__.py  manifest.json  provider.py  pyproject.toml
community/provider_grok/: README.md  __init__.py  manifest.json  provider.py  pyproject.toml
community/provider_groq/: README.md  __init__.py  manifest.json  provider.py  pyproject.toml
community/provider_vertex_claude/: README.md  __init__.py  manifest.json  provider.py  pyproject.toml
community/provider_vertex_gemini/: README.md  __init__.py  manifest.json  provider.py  pyproject.toml
community/rag_support/: README.md  __init__.py  adapters.py  graph.py  manifest.json  models.py  pipeline.py  pyproject.toml
community/rag_support/chunking/: __init__.py  base.py  code.py  html.py  json_chunker.py  markdown.py  recursive.py  semantic.py  sentence.py  token.py
community/rag_support/extractors/: __init__.py  base.py  keywords.py  questions.py  summary.py  title.py
community/rag_support/rerankers/: __init__.py  base.py  cross_encoder.py  llm.py
community/tool_filter_rag/: README.md  __init__.py  filter.py  manifest.json  pyproject.toml
community/workspace_support/: README.md  __init__.py  filesystem.py  manifest.json  pyproject.toml  sandbox.py  skills.py  workspace.py
framework/agent_support/: README.md  hooks.py  manifest.json  pyproject.toml  schemas.py
framework/agent_support/agent_support/: __init__.py  hooks.py  schemas.py
framework/agent_support/machine_agent/: __init__.py
framework/auth_support/: README.md  manifest.json  pyproject.toml
framework/auth_support/machine_auth/: __init__.py
framework/cli_support/: README.md  __init__.py  main.py  manifest.json  pyproject.toml
framework/cli_support/cli_support/: _server_launcher.py  main.py  manifest_sync.py  utils.py
framework/cli_support/cli_support/commands/: _dev_server.py  build_cmd.py  deploy_cmd.py  dev_cmd.py  eval_cmd.py  init_cmd.py  plugin_cmd.py  studio_cmd.py
framework/cli_support/cli_support/scaffolds/: agent.py.j2
framework/cli_support/cli_support/scaffolds/project/: .gitignore.j2  pyproject.toml.j2
framework/cli_support/cli_support/tui/: app.py
framework/cli_support/cli_support/tui/screens/: __init__.py  config.py  plugins.py  services.py  store.py
framework/cli_support/commands/: init_cmd.py  tool_cmd.py
framework/cli_support/machine_cli/: _server_launcher.py  main.py
framework/cli_support/machine_cli/commands/: _dev_server.py  agent_cmd.py  build_cmd.py  deploy_cmd.py  dev_cmd.py  eval_cmd.py  init_cmd.py  plugin_cmd.py  studio_cmd.py  tool_cmd.py
framework/cli_support/machine_cli/tui/: app.py
framework/cli_support/scaffolds/: tool.py.j2
framework/cli_support/tests/: take_screenshots.py  test_init_cmd.py  test_tui.py
framework/cli_support/tui/: __init__.py
framework/cli_support/tui/screens/: config.py  services.py  store.py
framework/cli_support/tui/styles/: app.tcss
framework/embeddings/: README.md  __init__.py  manifest.json  pyproject.toml
framework/embeddings/embeddings/: __init__.py  hooks.py  schemas.py
framework/mcp_support/: README.md  manifest.json  pyproject.toml
framework/mcp_support/mcp_support/: __init__.py
framework/memory_support/: README.md  __init__.py  manager.py  manifest.json  observational.py  pyproject.toml  tools.py
framework/memory_support/machine_memory/: __init__.py  in_memory_storage.py  manager.py  observational.py  storage.py  windowing.py  working.py
framework/memory_support/memory_support/: in_memory_storage.py  storage.py  thread.py  tools.py
framework/model_provider_support/: README.md  manifest.json  pyproject.toml
framework/model_provider_support/machine_model_provider/: hooks.py  schemas.py
framework/model_provider_support/model_provider_support/: __init__.py  hooks.py  schemas.py
framework/processor_support/: README.md  manifest.json  pyproject.toml
framework/processor_support/builtin/: cost_guard.py  prompt_injection.py  token_limiter.py
framework/processor_support/machine_processor/: __init__.py  base.py  runner.py
framework/processor_support/machine_processor/builtin/: __init__.py  cache.py  moderation.py  pii.py  regex_filter.py  tool_search.py
framework/prompt_support/: README.md  __init__.py  manifest.json  pyproject.toml  schemas.py
framework/prompt_support/machine_prompt/: __init__.py  registry.py
framework/prompt_support/prompt_support/: schemas.py
framework/storage_support/: README.md  __init__.py  manifest.json  pyproject.toml
(+379 files in other folders)
