[project]
name = "machine-core-agent-runtime-basic"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []


[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "agent_runtime_basic/manifest.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
