[project]
name = "machine-core-agent-runtime-pydantic"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pydantic-ai>=1.0.0"]


[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "agent_runtime_pydantic/manifest.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
