[project]
name = "machine-core-deployer-support"
version = "0.1.0"
description = "Deployment target category and built-in deployers for machine-core"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.0"]


[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "deployer_support/manifest.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
