[project]
name = "embeddings_azure"
version = "0.1.0"
description = "Azure OpenAI embedding provider"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28"]


[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "embeddings_azure/manifest.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
