[project]
name = "embeddings_ollama"
version = "0.1.0"
description = "Ollama embedding provider via OpenAI-compatible API"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28"]


[tool.hatch.build.targets.wheel]
packages = ["."]
sources = {"." = "embeddings_ollama"}

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "embeddings_ollama/manifest.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
