[project]
name = "provider_azure_openai"
version = "0.1.0"
description = "Azure OpenAI LLM provider for machine-core"
requires-python = ">=3.12"
dependencies = ["pydantic-ai>=0.0.1", "openai>=1.0"]


[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "provider_azure_openai/manifest.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
