[project]
name = "provider_github_copilot"
version = "0.1.0"
description = "GitHub Copilot LLM provider for machine-core"
requires-python = ">=3.12"
dependencies = ["pydantic-ai>=0.0.1", "httpx>=0.28"]

[project.scripts]
machine-core-copilot-login = "provider_github_copilot.cli:main"


[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "provider_github_copilot/manifest.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
