[project]
name = "provider_grok"
version = "0.1.0"
description = "Grok (xAI) LLM provider for machine-core"
requires-python = ">=3.12"
dependencies = ["pydantic-ai>=0.0.1"]


[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "provider_grok/manifest.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
