[project]
name = "rag_support"
version = "0.1.0"
description = "RAG pipeline plugin for machine-core"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
cross-encoder = ["sentence-transformers>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = {"." = "rag_support"}

