[project]
name = "tool_filter_rag"
version = "0.1.0"
description = "Semantic tool filtering for machine-core"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = {"." = "tool_filter_rag"}
