[project]
name = "workspace_support"
version = "0.5.0"
description = "Defines the workspace category for workspace management"
requires-python = ">=3.12"
dependencies = []


[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "workspace_support/manifest.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
