[project]
name = "machine-core-agent-support"
version = "0.5.0"
description = "Defines the agent category for autonomous agents"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machine_agent"]
