[project]
name = "machine-core-auth-support"
version = "0.1.0"
description = "Auth provider category: JWT and API Key authentication"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machine_auth"]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "auth_support/manifest.json"
