[project]
name = "machine-core-cli-support"
version = "0.1.0"
description = "machine CLI tooling for machine-core"
requires-python = ">=3.12"
dependencies = ["typer>=0.12.0", "rich>=13.0.0", "jinja2>=3.1.0", "textual>=3.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli_support"]
