[project]
name = "cli-support"
version = "0.1.0"
description = "machine CLI tooling for machine-core"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0", 
    "rich>=13.0.0", 
    "jinja2>=3.1.0", 
    "textual>=3.0", 
    "httpx>=0.27",
    "machine_core",
]


[tool.uv.sources]
machine_core = { git = "git+ssh://git@github.com/samletnorge/machine-core.git" }
server_support = { git = "git+ssh://git@github.com/samletnorge/machine-plugins.git", subdirectory = "framework/server_support" }
agent_support = { git = "git+ssh://git@github.com/samletnorge/machine-plugins.git", subdirectory = "framework/agent_support" }
tool_support = { git = "git+ssh://git@github.com/samletnorge/machine-plugins.git", subdirectory = "framework/tool_support" }

[dependency-groups]
framework = [
    "server_support",
    "agent_support",
    "tool_support",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli_support"]
