[project]
name = "cli_support"
version = "0.1.0"
description = "machine CLI tooling for machine-core"
requires-python = ">=3.12"
dependencies = [
    "machine-core @ git+ssh://git@github.com/samletnorge/machine-core.git",
    "typer>=0.12.0", 
    "rich>=13.0.0", 
    "jinja2>=3.1.0", 
    "textual>=3.0", 
    "httpx>=0.27",
    "server_support",
]


[tool.uv.sources]
server_support = { git = "git+ssh://git@github.com/samletnorge/machine-plugins.git", subdirectory = "framework/server_support" }

[dependency-groups]
framework = [
    "server_support",
]

[tool.uv]
default-groups = "all"

[project.scripts]
machine = "cli_support.main:app"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli_support"]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "cli_support/manifest.json"
