[project]
name = "embeddings"
version = "0.5.0"
description = "Defines the embedding category for vector embeddings"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["embeddings"]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "embeddings/manifest.json"
