[project]
name = "mcp_support"
version = "0.5.0"
description = "mcp registry support plugin"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_support"]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "mcp_support/manifest.json"
