[project]
name = "memory_support"
version = "0.10.0"
description = "Defines the memory and storage-backend categories for machine-core"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machine_memory"]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "memory_support/manifest.json"
