[project]
name = "machine-core-processor-support"
version = "0.5.0"
description = "Defines the processor category for data processors"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machine_processor"]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "processor_support/manifest.json"
