[project]
name = "prompt_support"
version = "0.5.0"
description = "Defines the prompt category for prompt templates"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompt_support"]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "prompt_support/manifest.json"
