[project]
name = "storage_support"
version = "0.1.0"
description = "Storage backend implementations: local and S3"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machine_storage"]

[tool.hatch.build.targets.wheel.force-include]
"manifest.json" = "storage_support/manifest.json"
